added seal logo pins and formal json file for data

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.marker-btn {
+	background: none;
+	border: none;
+	cursor: pointer;
+}
+
+
+.marker-btn img{
+	width: 20px;
+	height: 20px;
+} 
