--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ Form {
   font-family: 'Roboto', sans-serif
 }
 Popup {
-  font-family: 'Roboto', sans-serif
+  font-family: 'Times New Roman', sans-serif
 }
 Marker {
   font-family: 'Roboto', sans-serif
