--- a/src/Components/styles.module.css
+++ b/src/Components/styles.module.css
@@ -1,9 +1,13 @@
-.form {
-  padding: 20px;
+.container {
+  padding: 2;
   background-color: #f7f8f9;
-  border-radius: 0.2rem;
+  width: 100%;
 }
 
-.container {
-  padding: 0;
+.form-label {
+  padding: 5;
+}
+
+.form-select {
+  padding: 10;
 }
