add styles for filter

--- a/src/App.css
+++ b/src/App.css
@@ -43,11 +43,15 @@
   left: 0;
   max-width: 320px;
   background: #fff;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   padding: 12px 24px;
   margin: 20px;
   font-size: 14px;
   line-height: 2;
   color: #6b6b76;
   outline: none;
+}
+
+.submit-button {
+  margin: 20px;
 }
