--- a/src/Components/DropdownRefinementList.css
+++ b/src/Components/DropdownRefinementList.css
@@ -12,7 +12,7 @@
 .ais-DropdownRefinementList-List {
   padding: 12px;
   background: #fff;
-  position: absolute;
+  position: relative;
   margin-top: 12px;
   margin-left: -6px;
   border: 1px solid #999;
