--- a/src/Components/ClusteredMarkers.css
+++ b/src/Components/ClusteredMarkers.css
@@ -9,3 +9,13 @@
     width: 40px;
     height: 40px;
   }
+
+.cluster-marker {
+    width: 20px;
+    height: 20px;
+    color: #fff;
+    background: #087cdb;
+    border-radius: 20px;
+    text-align: center;
+}; 
+  
