changed the color scheme to UCSC colors

--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -1,4 +1,12 @@
 .header{
-  background-color: #003c6c;
+  background-color: #ffbf00;
   color: #ffffff
+}
+.nav-link {
+    color: white !important
+}
+
+.nav-link:hover{
+
+    color:#003c6c !important
 }
