--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -2,27 +2,22 @@
 .ToggleSwitch {
   position: relative;
   display: inline-block;
-  width: 70px;
-  height: 35px;
-  background-color: lightgrey;
-  transition: transform 0.2s ease;
+  width: 60px;
+  height: 30px;
 }
 
-.ToggleSwitch.off,
+.ToggleSwitch.off {
+  border-radius: 25px;
+  padding: 2px;
+  cursor: pointer;
+  background-color:lightgrey;
+
+}
 .ToggleSwitch.on {
   border-radius: 25px;
-  padding: 5px;
+  padding: 2px;
   cursor: pointer;
-}
-
-.ToggleSwitch.off:before,
-.ToggleSwitch.off:after {
-  transition: transform 0.2s ease;
-}
-
-.ToggleSwitch.on:before,
-.ToggleSwitch.on:after {
-  transition: transform 0.2s ease;
+  background-color: #ffbf00;
 }
 
 .ToggleSwitch.off:before,
@@ -30,8 +25,8 @@
   display: inline-block;
   position: absolute;
   content: "";
-  height: 25px;
-  width: 25px;
+  height: 26px;
+  width: 26px;
   background-color: darkgray;
   transition: transform 0.2s ease;
   border-radius: 50%;
@@ -39,9 +34,8 @@
 }
 
 .ToggleSwitch.on:before {
-  transform: translateX(35px);
-  background-color: #003c6c;
-  color: black;
+  transform: translateX(30px);
+  background-color: darkgrey;
 }
 
 
