--- a/src/Components/Legend.css
+++ b/src/Components/Legend.css
@@ -4,12 +4,11 @@
   right: 0;
   max-width: 320px;
   background: #fff;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   padding: 12px 24px;
   margin: 5px;
   font-size: 13px;
   line-height: 2;
   color: #6b6b76;
-  text-transform: uppercase;
   outline: none;
 }
