--- a/src/Components/Content.css
+++ b/src/Components/Content.css
@@ -9,7 +9,8 @@
   display: flex;
   padding: 10px;
   margin: 10px;
-  max-width: 265px;
+  max-width: 300px;
+  height: 50px;
   justify-content: space-between;
 }
 
@@ -18,8 +19,12 @@
   padding-left: 1.25em;
   background: #ffffff;
   border-style: none;
+  display: flex;
+  z-index: 1;
+  overflow: visible;
 }
 
+/* sidebar button hamburger icon */
 .sidebar-btn:before {
   content: "";
   position: absolute;
@@ -30,4 +35,40 @@
   height: 0.15em;
   background: black;
   box-shadow: 0 0.25em 0 0 black, 0 0.5em 0 0 black;
+}
+
+.sidebar-btn-tooltip {
+  /* appearance */
+  opacity: 0;
+  transition: opacity 0.3s ease-out;
+  width: 120px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  font-size: small;
+
+  /* positioning */
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+}
+
+/* tooltip arrow */
+.sidebar-btn-tooltip::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.sidebar-btn:hover .sidebar-btn-tooltip {
+  opacity: 1;
 }
