--- a/src/Components/Content.css
+++ b/src/Components/Content.css
@@ -7,10 +7,7 @@
 
 .info {
   display: flex;
-  padding: 10px;
-  margin: 10px;
   max-width: 300px;
-  height: 50px;
   justify-content: space-between;
 }
 
@@ -22,6 +19,9 @@
   display: flex;
   z-index: 1;
   overflow: visible;
+  margin-left: 0px;
+  height: 30px;
+  width: 30px;
 }
 
 /* sidebar button hamburger icon */
@@ -39,6 +39,8 @@
 
 .sidebar-btn-tooltip {
   /* appearance */
+
+  display: none;
   opacity: 0;
   transition: opacity 0.3s ease-out;
   width: 120px;
@@ -70,5 +72,6 @@
 }
 
 .sidebar-btn:hover .sidebar-btn-tooltip {
+  display: block;
   opacity: 1;
 }
