--- a/src/Components/Content.css
+++ b/src/Components/Content.css
@@ -3,6 +3,15 @@
   max-height: 90%;
   margin-left: 23%;
   margin-right: 10px;
+  transition: all 0.5s ease 0s;
+}
+
+.content_big {
+  max-width: 100%;
+  max-height: 90%;
+  margin-left: 10px;
+  margin-right: 10px;
+  transition: all 0.5s ease 0s;
 }
 
 .info {
