--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -5,6 +5,16 @@
   height: 680px;
   overflow: auto;
   overflow-x: hidden;
+  transition: all 0.5s ease 0s;
+}
+
+.sidebar_hidden {
+  float: left;
+  width: 0%;
+  margin-top: 18px;
+  height: 680px;
+  overflow: hidden;
+  transition: all 0.5s ease 0s;
 }
 
 .toggle-label {
