--- a/src/Components/Content.css
+++ b/src/Components/Content.css
@@ -18,12 +18,13 @@
 .info {
   display: flex;
   max-width: 300px;
-  justify-content: space-between;
+  margin: 0 0 50 50;
 }
 
 .sidebar-btn {
   position: relative;
   padding-left: 1.25em;
+  margin-right: 20px;
   background: #ffffff;
   border-style: none;
   display: flex;
