--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -17,9 +17,16 @@
   transition: all 0.5s ease 0s;
 }
 
-.toggles {
-  display: block;
-  padding: 20px;
+.toggles-container {
+  padding: 18px;
+  z-index: 998;
+  cursor: pointer;
+  position: relative;
+  border: 1px solid #999;
+  margin: 10px;
+  background: white;
+  display: inline-block;
+  width: 90%;
 }
 
 .ToggleSwitch {
