--- a/src/Components/TimeSlider.css
+++ b/src/Components/TimeSlider.css
@@ -19,3 +19,13 @@
 .hidden {
   display: none;
 }
+
+h4 {
+  font-size: medium;
+  color: black;
+}
+
+label {
+  padding: 0 12px 0 12px;
+  font-size: small;
+}
