--- a/src/Components/StrandingPopup.css
+++ b/src/Components/StrandingPopup.css
@@ -11,6 +11,7 @@
   border-radius: 3px 3px 0 0;
   font-weight: 700;
   margin: -10px;
+  text-align: left;
 }
 
 .stranding-popup h2 {
@@ -18,10 +19,12 @@
   padding: 20px 5px 5px 5px;
   font-weight: 500;
   font-size: larger;
+  text-align: left;
 }
 .stranding-popup p {
   margin: 0;
   display: block;
   padding: 5px;
   font-weight: 400;
+  text-align: left;
 }
