--- a/src/Components/TimeSlider.css
+++ b/src/Components/TimeSlider.css
@@ -29,3 +29,13 @@
   padding: 0 12px 0 12px;
   font-size: small;
 }
+
+.button {
+  border-style: solid;
+  box-sizing: border-box;
+  width: 25px;
+  height: 25px;
+  border-width: 12px 0px 12px 24px;
+  border-color: transparent transparent transparent #202020;
+  align-content: center;
+}
