--- a/src/Components/UploadPopup.css
+++ b/src/Components/UploadPopup.css
@@ -14,6 +14,22 @@
   left: 50%;
   top: 50%;
   width: 50%;
-  height: 50%;
+  height: 25%;
   transform: translate(-50%, -50%);
+}
+
+.dropzone {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border-width: 2px;
+  border-radius: 2px;
+  border-color: #eeeeee;
+  border-style: dashed;
+  background-color: #fafafa;
+  color: #bdbdbd;
+  outline: none;
+  transition: border 0.24s ease-in-out;
 }
