--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -65,3 +65,21 @@
   transform: translateX(18px);
   background-color: white;
 }
+
+.uploadButton {
+  display: inline-block;
+  padding: 0.3em 1.2em;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.5em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  color: #ffffff;
+  background-color: #4eb5f1;
+  text-align: center;
+  transition: all 0.2s;
+}
+.uploadButton:hover {
+  background-color: #4095c6;
+}
