--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -68,8 +68,8 @@
 
 .uploadButton {
   display: inline-block;
-  padding: 0.3em 1.2em;
-  margin: 0 0.3em 0.3em 0;
+  padding: 0.2em 1.8em;
+  margin: 0 0 0 12px;
   border-radius: 0.5em;
   box-sizing: border-box;
   text-decoration: none;
