Added a map function to map over the memembers of the filter list array, so that they can be styled as independent bubbles.

--- a/src/Components/ActiveFilterBar.css
+++ b/src/Components/ActiveFilterBar.css
@@ -5,5 +5,9 @@
     border-radius: 5px;
     color: white;
     font: 300 13px/10px "Source Sans Pro", "Helvetica Neue", Sans-serif;
-    display:inline-block;
+}
+
+.bubblelist
+{
+display: block;
 }
