Active filters showing up horizontally. Title changed.

--- a/src/Components/ActiveFilterBar.css
+++ b/src/Components/ActiveFilterBar.css
@@ -1,5 +1,5 @@
 .filterbubble {
-    display: flex;
+    display: inline-flex;
     padding: 5px;
     background: darkgrey;
     border-radius: 5px;
