--- a/src/Components/UploadPopup.css
+++ b/src/Components/UploadPopup.css
@@ -62,7 +62,7 @@
   text-align: center;
   transition: all 0.2s;
   border: none;
-  transform: translate(50%, 50%);
+  transform: translate(70%, 50%);
 }
 .uploadButton2:hover {
   background-color: #288528;
@@ -90,7 +90,7 @@
 
 .uploadFiles {
   width: 50%;
-  padding: 20px;
+  padding: 0px 10px 0px 0px;
   margin: 20px 0px 20px 0px;
   overflow: auto;
 }
