--- a/src/Components/UploadPopup.css
+++ b/src/Components/UploadPopup.css
@@ -65,7 +65,6 @@
   text-align: center;
   transition: all 0.2s;
   border: none;
-  transform: translate(70%, 50%);
 }
 .uploadButton2:hover {
   background-color: #288528;
@@ -92,10 +91,11 @@
   height: 5px;
 }
 
-.uploadFiles {
+.fileContent {
+  display: flex;
+  flex-direction: column;
   width: 50%;
-  padding: 0px 10px 0px 0px;
-  margin: 20px 0px 20px 0px;
+  margin: 20px 25px 20px 0px;
   overflow: auto;
 }
 
@@ -115,4 +115,20 @@
   text-align: left;
   margin-bottom: 0px;
   font-size: small;
+}
+
+.fileDetail {
+  height: 20%;
+}
+
+.recordContent {
+  height: 55%;
+  overflow-y: auto;
+}
+
+.uploadButtonContent {
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 10px;
 }
