--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -2,7 +2,7 @@
   float: left;
   width: 23%;
   margin-top: 18px;
-  height: 680px;
+  height: 100%;
   overflow: auto;
   overflow-x: hidden;
   transition: all 0.5s ease 0s;
