footer font size

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,4 +1,5 @@
-.footer{
-    text-align: center;
-    padding: 10px, 0;
+.footer {
+  text-align: center;
+  font-size: x-small;
+  padding: 10px, 0;
 }
