--- a/src/Components/StrandingPopup.css
+++ b/src/Components/StrandingPopup.css
@@ -1,10 +1,18 @@
+html, body {
+  height: 100%;
+}
+
+.wrapper {
+  height: 100%;
+}
+
 .stranding-popup {
   font: 375 14px/20px "Source Sans Pro", "Helvetica Neue", Sans-serif;
   padding: 0;
-  max-height: 320px;
+  min-height: 320px;
 }
 .stranding-popup h3 {
-  background: #7e807b;
+  background: hsl(84, 2%, 49%);
   color: #fff;
   display: block;
   padding: 9px;
@@ -36,4 +44,48 @@
 
 .highlight {
   color: gray;
+}
+
+.case-study {
+  font: 375 14px/20px "Source Sans Pro", "Helvetica Neue", Sans-serif;
+  min-height: 320px;
+  width: 200px;
+  text-align: left;
+}
+
+.case-study h3 {
+  background: #56B1CE;
+  color: #fff;
+  display: block;
+  padding: 9px;
+  border-radius: 3px 3px 0 0;
+  font-weight: 500;
+  margin: -10px;
+  text-align: left;
+  font-size: 175%;
+}
+
+.case-study-photo {
+  margin-top: 15px;
+  max-width: 180px;
+}
+
+.case-study-summary {
+  text-align: left;
+  font-weight: bold;
+}
+
+.case-study-button {
+  border-radius: 3px 3px 0 0;
+  width: 100px;
+  font-weight: 500;
+  background-color: #56B1CE;
+  border-color: #56B1CE;
+  position: absolute;
+  left: 50px;
+  top: 285px;
+}
+
+.mapboxgl-popup-content {
+  height: 320px;
 }
