--- a/src/Components/StrandingPopup.css
+++ b/src/Components/StrandingPopup.css
@@ -3,13 +3,15 @@ html, body {
 }
 
 .wrapper {
-  height: 100%;
+   height: 80%;
 }
 
 .stranding-popup {
-  font: 375 14px/20px "Source Sans Pro", "Helvetica Neue", Sans-serif;
-  padding: 0;
-  min-height: 320px;
+   font: 350 14px/20px "Source Sans Pro", "Helvetica Neue", Sans-serif;
+   padding: 0px;
+   min-height: 200px;
+   max-height: 400px;
+   width: 220px;
 }
 .stranding-popup h3 {
   background: hsl(84, 2%, 49%);
@@ -29,16 +31,24 @@ html, body {
 
 .stranding-popup h2 {
   display: block;
-  padding: 10px 0px 0px 4px;
-  font-weight: 500;
-  font-size: 125%;
+  padding-top: 15px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 5px;
+  font-weight: 450;
+  font-size: 100%;
   text-align: left;
 }
 .stranding-popup p {
   margin: 0;
   display: block;
-  padding: 2px;
+  padding-top: 3px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 5px;
+  
   font-weight: 400;
+  font-size: 100%;
   text-align: left;
 }
 
@@ -87,5 +97,6 @@ html, body {
 }
 
 .mapboxgl-popup-content {
-  height: 320px;
+  min-height: 185px;
+  max-height: 285px;
 }
