Adjusted popup sizes to fix appearance when case study popup is displayed

--- a/src/Components/StrandingPopup.css
+++ b/src/Components/StrandingPopup.css
@@ -3,15 +3,14 @@ html, body {
 }
 
 .wrapper {
-   height: 80%;
+  height: 80%;
 }
 
 .stranding-popup {
-   font: 350 14px/20px "Source Sans Pro", "Helvetica Neue", Sans-serif;
-   padding: 0px;
-   min-height: 200px;
-   max-height: 400px;
-   width: 220px;
+  font: 350 14px/20px "Source Sans Pro", "Helvetica Neue", Sans-serif;
+  padding: 0px;
+  min-height: 290px;
+  width: 220px;
 }
 .stranding-popup h3 {
   background: hsl(84, 2%, 49%);
@@ -52,7 +51,7 @@ html, body {
   text-align: left;
 }
 .local {
-   font-size: 95%;
+  font-size: 95%;
 }
 .highlight {
   color: gray;
@@ -60,7 +59,8 @@ html, body {
 
 .case-study {
   font: 375 14px/20px "Source Sans Pro", "Helvetica Neue", Sans-serif;
-  min-height: 320px;
+  min-height: 300px;
+  max-height: 300px;
   width: 200px;
   text-align: left;
 }
@@ -83,6 +83,7 @@ html, body {
 }
 
 .case-study-summary {
+  font: 375 14px/16px "Source Sans Pro", "Helvetica Neue", Sans-serif;
   text-align: left;
   font-weight: bold;
 }
@@ -95,10 +96,9 @@ html, body {
   border-color: #56B1CE;
   position: absolute;
   left: 50px;
-  top: 285px;
+  top: 260px;
 }
 
 .mapboxgl-popup-content {
-  min-height: 185px;
-  max-height: 315px;
+  height: 290px;
 }
