--- a/src/Components/StrandingPopup.css
+++ b/src/Components/StrandingPopup.css
@@ -87,13 +87,13 @@ html, body {
   margin-top: 5px;
   font: 375 16px/16px "Source Sans Pro", "Helvetica Neue", Sans-serif;
   text-align: left;
-  font-weight: bold;
 }
 
 .case-study-button {
   border-radius: 3px 3px 0 0;
   width: 100px;
   font-weight: 500;
+  color: white;
   background-color: #56B1CE;
   border-color: #56B1CE;
   position: absolute;
