--- a/src/Components/UploadPopup.css
+++ b/src/Components/UploadPopup.css
@@ -70,6 +70,23 @@
   background-color: #288528;
 }
 
+.uploadButtonDisabled {
+  display: inline-block;
+  padding: 0.3em 1.2em;
+  margin-bottom: 10px;
+  border-radius: 0.5em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  color: #ffffff;
+  background-color: gray;
+  text-align: center;
+  transition: all 0.2s;
+  border: none;
+  cursor: not-allowed;
+}
+
 .close {
   float: right;
   font-size: 2em;
@@ -102,6 +119,8 @@
 .subtitle {
   text-align: left;
   font-size: small;
+  font-weight: 500;
+  margin-top: 5px;
 }
 
 .fileName {
@@ -118,7 +137,7 @@
 }
 
 .fileDetail {
-  height: 20%;
+  height: 10%;
 }
 
 .recordContent {
