--- a/src/Components/StrandingPopup.css
+++ b/src/Components/StrandingPopup.css
@@ -9,7 +9,7 @@ html, body {
 .stranding-popup {
   font: 350 14px/20px "Source Sans Pro", "Helvetica Neue", Sans-serif;
   padding: 0px;
-  min-height: 290px;
+  min-height: 300px;
   width: 220px;
 }
 .stranding-popup h3 {
@@ -22,6 +22,7 @@ html, body {
   margin: -10px;
   text-align: left;
   font-size: 175%;
+  width: 245px;
 }
 
 .bg-image {
@@ -43,12 +44,12 @@ html, body {
   display: block;
   padding-top: 3px;
   padding-right: 0px;
-  padding-bottom: 0px;
+  padding-bottom: 2px;
   padding-left: 5px;
-  
   font-weight: 400;
   font-size: 100%;
   text-align: left;
+  width: 230px;
 }
 .local {
   font-size: 95%;
@@ -58,5 +59,6 @@ html, body {
 }
 
 .mapboxgl-popup-content {
-  height: 290px;
+  height: 335px;
+  width: 245px;
 }
